--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@
 
 layout: default
 ---
+<div style="text-align:center">
+  <b><a href="{{ site.project_url }}" class="page-header btn">Projects</a></b>
+  <a href="{{ site.blog_url }}" class="page-header btn">Blog</a>
+</div>
