change button default bg (on hover too), add CV button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 layout: default
 ---
-<div style="text-align:center">
-  <b><a href="{{ site.project_url }}" class="page-header btn">Projects</a></b>
-  <a href="{{ site.blog_url }}" class="page-header btn">Blog</a>
+<div class="btn-container">
+  <a  target="_blank" href="{{ site.project_url }}" class="btn"><b>Projects</b></a>
+  <a  href="https://Voldy87.tk" target="_blank" class="btn">GitHub</a>
+  <a  target="_blank" class="btn">Blog</a> <!-- href="{{ site.blog_url }}" -->
+  <a  target="_blank" class="btn">CV</a>
 </div>
