--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 
 layout: default
 ---
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 <div class="btn-container">
-  <a  target="_blank" href="{{ site.project_url }}" class="btn"><b>Projects</b></a>
-  <a  href="https://Voldy87.tk" target="_blank" class="btn">GitHub</a>
-  <a  target="_blank" class="btn">Blog</a> <!-- href="{{ site.blog_url }}" -->
-  <a  target="_blank" class="btn">CV</a>
+  <a  target="_blank" href="{{ site.project_url }}" class="btn">
+    <i class="fas fa-cog fa-spin"></i>
+    <span><b>Projects</b></span>
+  </a>
+  <a  href="https://github.com/Voldy87" target="_blank" class="btn">
+    <i class="fab fa-github fa-spin"></i>
+    <span>GitHub</span>
+  </a>
+  <a  target="_blank" class="btn disabled">
+    <i class="fas fa-user-circle fa-spin"></i>
+    <span>Blog</span>
+  </a> <!-- href="{{ site.blog_url }}" -->
+
+
+  <div target="_blank" class="btn cv-container">
+        <a href="https://s3-eu-west-1.amazonaws.com/voldy87-aws-s3-1/public/CV_en_1.pdf" target="_blank" class="left">
+          <i class="far fa-file-alt"></i>
+          <span>EN</span>
+        </a>
+        <span>CV</span>
+        <a target="_blank" class="right">
+            <i class="far fa-file-alt"></i>
+            <span>FR</span>
+        </a>
+  </div>
+
+
 </div>
