add the link for the cv in French

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
           <span>EN</span>
         </a>
         <span>CV</span>
-        <a target="_blank" class="right">
+        <a href="https://s3-eu-west-1.amazonaws.com/voldy87-aws-s3-1/public/CV_fr_1.pdf" target="_blank" class="right">
             <i class="far fa-file-alt"></i>
             <span>FR</span>
         </a>
