fix href referrer issues

--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@ layout: default
     <span>GitHub</span>
   </a>
   <a  target="_blank" class="btn disabled">
+    <i class="fas fa-question-circle fa-spin"></i>
+    <span>Resources</span>
+  </a>
+  <a  target="_blank" class="btn disabled">
     <i class="fas fa-user-circle fa-spin"></i>
     <span>Blog</span>
   </a> <!-- href="{{ site.blog_url }}" -->
 
 
   <div target="_blank" class="btn cv-container">
-        <a href="https://s3-eu-west-1.amazonaws.com/voldy87-aws-s3-1/public/CV_en_1.pdf" target="_blank" class="left">
+        <a href="https://s3-eu-west-1.amazonaws.com/voldy87-aws-s3-1/public/CV_en_1.pdf" 
+           target="_blank" rel="noopener noreferrer" class="left">
           <i class="far fa-file-alt"></i>
           <span>EN</span>
         </a>
         <span>CV</span>
-        <a target="_blank" class="right">
+        <a  href="#"
+            target="_blank" rel="noopener noreferrer" class="right">
             <i class="far fa-file-alt"></i>
             <span>FR</span>
         </a>
